--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 	<name>MiCarreraPerfecta</name>
 	<description>Api for back</description>
 	<properties>
-		<java.version>17</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+                                    <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
